--- a/actividades.html
+++ b/actividades.html
@@ -31,7 +31,7 @@
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                        <li class="header__nav-item"><a href="actividades.html" class="header__check">Actividades</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -39,31 +39,30 @@
         </header>
         <main class="actividades__main">
             <section class="hero">
-                <img src="img/image6.png" class="hero-img" alt="">
+                <img src="img/image6.webp" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <h2>Actividades Eventes Presentaciones Artísticas</h2>
+                    <h2>Actividades Eventos Presentaciones Artísticas</h2>
                     <h4>Descubre el talento y la dedicación de nuestros estudiantes a través 
-                        de nuestras actividades y eventos.</h4>
-                    </div>
+                    de nuestras actividades y eventos.</h4>
                 </div>
             </section>
             <section class="actividades__carrusel">
                 <div class="actividades__carrusel-container container">
                     <ul class="actividades__carrusel-list">
                         <li class="actividades__carrusel-item">
-                            <img src="img/image13.jpg" class="actividades__carrusel-item-img">
+                            <img src="img/image13.webp" class="actividades__carrusel-item-img">
                             <h3>Teatro</h3>
                         </li>
                         <li class="actividades__carrusel-item">
-                            <img src="img/image11.jpg" class="actividades__carrusel-item-img">
+                            <img src="img/image11.webp" class="actividades__carrusel-item-img">
                             <h3>Danza</h3>
                         </li>
                         <li class="actividades__carrusel-item">
-                            <img src="img/image15.jpg" class="actividades__carrusel-item-img">
+                            <img src="img/image15.webp" class="actividades__carrusel-item-img">
                             <h3>Música</h3>
                         </li>
                         <li class="actividades__carrusel-item">
-                            <img src="img/image18.png" class="actividades__carrusel-item-img">
+                            <img src="img/image18.webp" class="actividades__carrusel-item-img">
                             <h3>Actuación</h3>
                         </li>
                     </ul>
@@ -72,71 +71,25 @@
             <section class="actividades__galery">
                 <div class="actividades__galery-list container">
                     <picture class="actividades__galery-item">
-                        <img src="img/image19.png" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Actuación</h3>
-                            <p>Lorem elit.ui, vel corporis aut fugit voluptati 
-                            ad? Corporis libero dolores quisquam odit temporib.
-                            ad? Corporis libero dolores quisquam odit temporib.</p>
-                            <h4>3 de Abril 2023</h4>
-                        </div>
+                        <img src="img/image19.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image1.jpg" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Actuación</h3>
-                            <p>Lorem elit.ui, vel corporis aut fugit voluptati 
-                            ad? odit temporib.</p>
-                            <h4>12 de Marzo 2022</h4>
-                        </div>
+                        <img src="img/image1.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image17.jpg" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Actuación</h3>
-                            <p>Lorem elit.ui, vel  aut fugit voluptati 
-                            ad? Corporis libero dolores quisquam odit temporib.</p>
-                            <h4>12 de Marzo 2022</h4>
-                        </div>
+                        <img src="img/image17.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image3.jpg" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Presentación de Teatro</h3>
-                            <p>Lorem elit.ui, vel  aut fugit voluptati 
-                            ad? Corporis libero dolores quisquam odit temporib.
-                            ad? Corporis libero dolores quisquam odit temporib.
-                            ad? Corporis libero dolores quisquam odit temporib.
-                            ad? Corporis libero dolores quisquam odit temporib.</p>
-                            <h4>21 de Junio 2023</h4>
-                        </div>
+                        <img src="img/image3.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image15.jpg" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Actuación</h3>
-                            <p>Lorem elit.ui, vel corporis aut fugit 
-                            ad? Corporis libero dolores  odit temporib.</p>
-                            <h4>12 de Marzo 2022</h4>
-                        </div>
+                        <img src="img/image15.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image5.jpg" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Evento de Teatro</h3>
-                            <p>Lorem elit.ui, vel corporis aut fugit  
-                            ad? Corporis libero dolores quisquam odit temporib.</p>
-                            <h4>3 de Mayo 2025</h4>
-                        </div>
+                        <img src="img/image5.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                     <picture class="actividades__galery-item">
-                        <img src="img/image18.png" class="actividades__galery-item-img" alt="">
-                        <div class="actividades__galery-item-info">
-                            <h3>Clases</h3>
-                            <p>Lorem elit.ui, vel corporis aut fugit  
-                            ad? Corporis libero dolores  odit.</p>
-                            <h4>3 de Mayo 2025</h4>
-                        </div>
+                        <img src="img/image18.webp" class="actividades__galery-item-img" alt="">
                     </picture>
                 </div>
             </section>
