--- a/clases.html
+++ b/clases.html
@@ -30,7 +30,7 @@
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
-                        <li class="header__nav-item"><a href="clases.html">Clases</a></li>
+                        <li class="header__nav-item"><a href="clases.html" class="header__check">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -39,7 +39,7 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image18.png" class="hero-img" alt="">
+                <img src="img/image18.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Formación Artística</h2>
                     <h4>Desarrolla tu talento de la mano de expertos. 
@@ -50,14 +50,14 @@
             <seccion class="clases">
                 <div class="clases__list">
                     <div class="clases__item" class="clases__item-img">
-                        <img src="img/image.png" class="clases__item-img" alt="">
+                        <img src="img/image.webp" class="clases__item-img" alt="">
                         <div class="clases__item-info">
                             <h2>Danza</h2>
                             <p>Nuestras clases de danza se centran en el movimiento, el ritmo y la expresión corporal. Los estudiantes 
                             aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
                             <div class="clases__item-btn">
-                                <button class="btn-1"><a href="">Contactar</a></button>
-                                <button class="btn-2"><a href="">Requisitos</a></button>
+                                <button class="btn-1"><a href="contacto.html">Contactar</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Requisitos</a></button>
                             </div>
                         </div>
                     </div>
@@ -67,21 +67,21 @@
                             <p>Enfocado en el arte de la representación, esta formación cubre técnicas de improvisación, expresión de emociones, 
                             dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
                             <div class="clases__item-btn">
-                                <button class="btn-1"><a href="">Contactar</a></button>
-                                <button class="btn-2"><a href="">Requisitos</a></button>
+                                <button class="btn-1"><a href="contacto.html">Contactar</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
                             </div>
                         </div>
-                        <img src="img/image9.jpg" class="clases__item-img" alt="">
+                        <img src="img/image9.webp" class="clases__item-img" alt="">
                     </div>
                     <div class="clases__item">
-                        <img src="img/image8.jpg" class="clases__item-img" alt="">
+                        <img src="img/image8.webp" class="clases__item-img" alt="">
                         <div class="clases__item-info">
                             <h2>Actuación</h2>
                             <p>Enfocado en las habilidades necesarias para la interpretación en diversos formatos, como el cine, la televisión y el teatro. Los estudiantes 
                             trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
                             <div class="clases__item-btn">
-                                <button class="btn-1"><a href="">Contactar</a></button>
-                                <button class="btn-2"><a href="">Requisitos</a></button>
+                                <button class="btn-1"><a href="contacto.html">Contactar</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
                             </div>
                         </div>
                     </div>
@@ -92,11 +92,11 @@
                             participantes aprenderán rutinas y técnicas que promueven la agilidad, 
                             el control del cuerpo y una postura correcta.</p>
                             <div class="clases__item-btn">
-                                <button class="btn-1"><a href="">Contactar</a></button>
-                                <button class="btn-2"><a href="">Requisitos</a></button>
+                                <button class="btn-1"><a href="contacto.html">Contactar</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
                             </div>
                         </div>
-                        <img src="img/image11.jpg" class="clases__item-img" alt="">
+                        <img src="img/image11.webp" class="clases__item-img" alt="">
                     </div>
                 </div>
             </seccion>
