--- a/contacto.html
+++ b/contacto.html
@@ -26,21 +26,18 @@
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
-                        <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
+                        <li class="header__nav-item"><a href="contacto.html" class="header__check">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
             <section class="hero contacto__hero">
-                <img src="img/image10.jpg" class="hero-img" alt="">
+                <img src="img/image10.webp" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <h2>Contacto</h2>
+                    <h2>Contátanos</h2>
                 </div>
             </section>
-
-
-
             <section class="contacto__container container">
                 <div class="contacto__list">
                     <div class="contacto__item">
@@ -65,9 +62,8 @@
                             <h3>Síguenos</h3>
                             <h4>No te pierdas nuestras últimas noticias, eventos y actualizaciones.</h4>
                             <div>
-                                <a href=""><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
-                                <a href=""><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
-                                <a href=""><img src="img/icon/youtube-svgrepo-com.svg" class="contacto__item-redes-icon" alt="youtube"></a>
+                                <a href="https://www.facebook.com/academia.lca/"><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
+                                <a href="https://www.instagram.com/academia.lca/"><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
                             </div>
                         </div>
                     </div>
@@ -104,6 +100,57 @@
                     </div>
                 </div>
             </section>
+            <section class="contacto__faq container">
+                <h2 class="contacto__faq-title">Preguntas Frecuentes</h2>
+                <ul class="contacto__faq-list">
+                    <li class="contacto__faq-item">
+                        <input type="checkbox" id="p1">
+                        <label for="p1" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="contacto__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="contacto__faq-item">
+                        <input type="checkbox" id="p2">
+                        <label for="p2" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="contacto__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="contacto__faq-item">
+                        <input type="checkbox" id="p3">
+                        <label for="p3" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="contacto__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="contacto__faq-item">
+                        <input type="checkbox" id="p4">
+                        <label for="p4" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="contacto__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="contacto__faq-item">
+                        <input type="checkbox" id="p5">
+                        <label for="p5" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <article class="contacto__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                </ul>
+            </section>
+            <div class="download">
+                <button class="download-btn">
+                    <a download="Planilla-LCA" href="download/planilla.pdf" class="download-link">
+                        <img src="img/icon/download-to-inbox-svgrepo-com.svg" class="download_icon alt="">
+                        <div class="download-info">
+                            <h2 class="download-title">Descargar Planilla de <br>Inscripción</h2>
+                            <span class="download-span">Formato PDF (500 KB)</span>
+                        </div>
+                    </a>
+                </button>
+            </div>
         </main>
         <footer>
             <div class="footer__derechos">
