--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
     <body>
         <main>
-            <section class="hero">
-                <img src="img/image6.png" class="hero-img" alt="">
+            <section class="inicio__hero hero">
+                <img src="img/image6.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
                     <h2>LUCES, CÁMARA Y ACCIÓN</h2>
@@ -24,7 +24,7 @@
                 </div>
             </section>
             <div class="whatsapp">
-            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
             </div>
             <div class="scroll">
                 <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -38,7 +38,7 @@
                     </div>
                     <nav class="header__nav" id="e">
                         <ul class="header__nav-list">
-                            <li class="header__nav-item"><a href="index.html">Inicio</a></li>
+                            <li class="header__nav-item"><a href="index.html" class="header__check">Inicio</a></li>
                             <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                             <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                             <li class="header__nav-item"><a href="clases.html">Clases</a></li>
@@ -48,7 +48,6 @@
                     </nav>
                 </div>
             </header>
-
             <section class="inicio__enfoque">
                 <div class="container">
                     <h2 class="inicio__enfoque-title" id="scroll">Nuestra Academia</h2>
@@ -83,8 +82,8 @@
                     <h3>Contactanos y forma parte de nuestra academia y
                     se tú el proximo protagonista de nustros shows</h3>
                     <div class="n-btn">
-                        <button class="btn-1"><a href="">Contactar</a></button>
-                        <button class="btn-2"><a href="">Requisitos</a></button>
+                        <button class="btn-1"><a href="contacto.html">Contactar</a></button>
+                        <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
                     </div>
                 </div>
             </div>  
