--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,7 @@
                 <nav class="header__nav" id="e">
                     <ul class="header__nav-list">
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
-                        <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
+                        <li class="header__nav-item"><a href="nosotros.html" class="header__check">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
@@ -39,7 +39,7 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/fondo textura cortina rojo.avif" class="hero-img" alt="">
+                <img src="img/fondo textura cortina rojo.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>¿QUIENES SOMOS?</h2>
                     <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
@@ -49,7 +49,7 @@
                 </div>
             </section>
             <section class="nosotros__historia container">
-                    <img src="img/image4.jpg" class="nosotros__historia-img" alt="">
+                    <img src="img/image4.webp" class="nosotros__historia-img" alt="">
                     <div class="nosotros__historia-info">
                         <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
                         <p>La Academia de Actuación y Danzas “Luces, Cámaras y Acción” fue fundada 
@@ -75,7 +75,7 @@
                         la excelencia pedagógica de cada programa ofrecido por la Academia.</p>
                     </li>
                     <li class="nosotros__mvv-item">
-                        <img src="img/image7.jpg" class="nosotros__mvv-item-img" alt="">
+                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
                     </li>
                     <li class="nosotros__mvv-item">
                         <h2>Misión</h2>
@@ -100,22 +100,22 @@
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
                         <h3>Juan Pérez</h3>
-                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Teatro</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Luis Castro</h3>
-                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Actuación Y Cine</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Fernanda Gil</h3>
-                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Dazna</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>María Lopéz</h3>
-                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Gimnasia</h4>
                     </div>
                 </div>
