--- a/programas.html
+++ b/programas.html
@@ -29,7 +29,7 @@
                     <ul class="header__nav-list">
                         <li class="header__nav-item"><a href="index.html">Inicio</a></li>
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
-                        <li class="header__nav-item"><a href="programas.html">Programas</a></li>
+                        <li class="header__nav-item"><a href="programas.html" class="header__check">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
                         <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
@@ -39,7 +39,7 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image13.jpg" class="hero-img" alt="">
+                <img src="img/image13.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Programas Artísticos</h2>
                     <h4>Nuestros programas estan diseñados para acompañar a cada estudiante en su viaje artístico, desde sus primeros pasos hasta alcanzar un nivel profecional.</h4>
@@ -48,7 +48,7 @@
             <section class="programas">
                 <div class="programas-list container">
                     <article class="programas-item">
-                        <img src="img/fondo textura cortina rojo.avif" alt="" class="programas-item-img">
+                        <img src="img/image21.png" alt="" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Babys</h3>
                             <ul>
@@ -61,7 +61,7 @@
                         </div>
                     </article>
                     <article class="programas-item">
-                        <img src="img/Black Texture.jpg"" class="programas-item-img">
+                        <img src="img/image22.png" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Infantil</h3>
                             <ul>
@@ -74,7 +74,7 @@
                         </div>
                     </article>
                     <article class="programas-item">
-                        <img src="img/Black Texture.jpg"" class="programas-item-img">
+                        <img src="img/image23.png" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Juvenil</h3>
                             <ul>
@@ -87,7 +87,7 @@
                         </div>
                     </article>
                     <article class="programas-item">
-                        <img src="img/27eb242d086793eb602e44319679ecf6.jpg" alt="" class="programas-item-img">
+                        <img src="img/image24.png" alt="" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Elenco Avanzado</h3>
                             <ul>
@@ -101,6 +101,32 @@
                     </article>
                 </div>
             </section>
+            <div class="programas__inscripcion container">
+                <h2>Pasos para Inscribirse</h2>
+                <div class="programas__inscripcion-list">
+                    <li class="programas__inscripcion-item">
+                        <img src="img/icon/select-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
+                        <div class="programas__inscripcion-item-info">
+                            <h4>Paso 1: Seleccione su programa</h4>
+                            <p>Explora nuestros programas y elige el que mejor se adapte a tus intereses y objetivos artísticos.</p>
+                        </div>
+                    </li>
+                    <li class="programas__inscripcion-item">
+                        <img src="img/icon/document-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
+                        <div class="programas__inscripcion-item-info">
+                            <h4>Paso 2: Requisitos</h4>
+                            <p>Revisa los requisitos de inscripción y rellena la planilla de inscripción.</p>
+                        </div>
+                    </li>
+                    <li class="programas__inscripcion-item">
+                        <img src="img/icon/phone-handset-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
+                        <div class="programas__inscripcion-item-info">
+                            <h4>Paso 3: Contactar</h4>
+                            <p>Comunícate con nuestro equipo a través de nuestro para concluir la inscripción.</p>
+                        </div>
+                    </li>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="footer__derechos">
