--- a/clases.html
+++ b/clases.html
@@ -13,7 +13,7 @@
 </head>
     <body>
         <div class="whatsapp">
-            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -57,7 +57,7 @@
                             aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Requisitos</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                             dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
                             </div>
                         </div>
                         <img src="img/image9.webp" class="clases__item-img" alt="">
@@ -81,7 +81,7 @@
                             trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                             el control del cuerpo y una postura correcta.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" >Requisitos</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
                             </div>
                         </div>
                         <img src="img/image11.webp" class="clases__item-img" alt="">
@@ -104,7 +104,7 @@
         <footer>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
+                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
                 </div>
             </div>
         </footer>
