--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
                             <img src="img/icon/whatsapp.svg" class="contacto__item-icon-whapp" alt="whatsapp">
                             <h3>WhatsApp</h3>
                             <h4>Envíanos un mensaje directo y te responderemos a la brevedad.</h4>
-                            <button class="btn-1"><a href="">Enviar Mensaje</a></button>
+                            <button class="btn-1"><a href="https://wa.me/04125504315">Enviar Mensaje</a></button>
                         </div>
                     </div>
                     <div class="contacto__item">
@@ -143,7 +143,7 @@
             <div class="download">
                 <button class="download-btn">
                     <a download="Planilla-LCA" href="download/planilla.pdf" class="download-link">
-                        <img src="img/icon/download-to-inbox-svgrepo-com.svg" class="download_icon alt="">
+                        <img src="img/icon/download-to-inbox-svgrepo-com.svg" class="download-icon alt="">
                         <div class="download-info">
                             <h2 class="download-title">Descargar Planilla de <br>Inscripción</h2>
                             <span class="download-span">Formato PDF (500 KB)</span>
@@ -155,7 +155,7 @@
         <footer>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
+                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
                 </div>
             </div>
         </footer>
