--- a/programas.html
+++ b/programas.html
@@ -13,7 +13,7 @@
 </head>
     <body>
         <div class="whatsapp">
-            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -101,9 +101,9 @@
                     </article>
                 </div>
             </section>
-            <div class="programas__inscripcion container">
+            <div class="programas__inscripcion">
                 <h2>Pasos para Inscribirse</h2>
-                <div class="programas__inscripcion-list">
+                <div class="programas__inscripcion-list container">
                     <li class="programas__inscripcion-item">
                         <img src="img/icon/select-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
                         <div class="programas__inscripcion-item-info">
@@ -131,7 +131,7 @@
         <footer>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
+                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
                 </div>
             </div>
         </footer>
