--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,7 @@
 </head>
     <body>
         <div class="whatsapp">
-            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -124,7 +124,7 @@
         <footer>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
+                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
                 </div>
             </div>
         </footer>
